--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 
 nav {
     width: 100%;
-    background-color: #f6f6f6;
+    background-color: #f9f9f9;
     z-index: 1;
     position: fixed;
 
@@ -10,25 +10,27 @@ nav {
         width: 800px;
         margin: 0 auto;
         .nav2;
-    }
 
-    @media @phone {
-        width: 80%;
-    }
+        @media @phone {
+            width: 80%;
+        }
 
-    h1 {
-        font-size: 3.5rem;
-        margin: 20px 0;
-    }
+        h1 {
+            font-size: 3.5rem;
+            margin: 20px 0;
+        }
 
-    .navigation {
-        .nav1;
-        width: 100%;
-        padding: 10px 0;
-            * {
-                text-decoration: none;
-                color: black;
-                font-size: 1.5rem;
-            }
+        .navigation {
+            width: 100%;
+            .nav1;
+            padding: 10px 0;
+                
+                a {
+                    text-decoration: none;
+                    color: black;
+                    font-size: 1.5rem;
+                }
+        }
+
     }
 }
